Fix chat covering up footer area

--- a/resources/assets/less/bem/osu-page.less
+++ b/resources/assets/less/bem/osu-page.less
@@ -232,7 +232,7 @@
 
     flex: 1 0 auto;
     display: flex;
-    height: calc((var(--vh, 1vh) * 100) - 150px); // viewport height - compact header+footer
+    height: calc((var(--vh, 1vh) * 100) - (@nav2-height + 70px + 50px)); // viewport height - compact header+footer
     width: 100vw;
     margin-bottom: 0;
 
